# buco

./: Cargo.toml
.github/workflows/: CI.yml  Publish.yml
buco_derive/: Cargo.toml  README.md
buco_derive/src/: inner.rs  lib.rs
build_tests/: 01-builder-enum.rs  01-builder-enum.stderr  02-builder-union.rs  02-builder-union.stderr  03-builder-struct.rs  04-builder-struct-partial.rs  04-builder-struct-partial.stderr  05-builder-struct-complete.rs  06-builder-struct-overwrite.rs  06-builder-struct-overwrite.stderr  07-builder-struct-optional.rs  08-builder-struct-optional-strict.rs  08-builder-struct-optional-strict.stderr
src/: lib.rs
