[package]
name = "buco"
description = "A compile-time builder pattern implementation for Rust"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
exclude = ["build_tests/*", "target/*"]
repository = "https://github.com/NishantJoshi00/buco.git"

[dependencies]
buco_derive = { path = "buco_derive", version = "0.2.0" }

[dev-dependencies]
trybuild = "1.0.99"
