[package]
name = "buco_derive"
description = "Proc-macro for [`buco`](https://github.com/NishantJoshi00/buco.git) crate"
version = "0.2.0"
edition = "2021"
exclude = ["build_tests/*", "target/*"]
repository = "https://github.com/NishantJoshi00/buco.git"
license = "../LICENSE"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.74"
quote = "1.0.36"
proc-macro2 = "1.0.86"
itertools = "0.13.0"
